--- a/style.css
+++ b/style.css
@@ -38,7 +38,23 @@ header{
 
     color: #ffffff;
     font-size: 3.5rem;
-    font-family: "Baloo Da 2", serif;
+    font-family: "Baloo 2", serif;
     font-weight: 200;
     text-shadow: .3rem .4rem 2px rgba(0, 0, 0, 4);
+    line-height: 3.5rem;
+    margin-bottom: 2rem;
+}
+
+.banner p{
+    font-family: "Josefin Slab", serif;
+    color: #fff;
+    font-size: 2rem;
+    text-shadow: .2rem .2rem rgba(0, 0, 0, .4);
+    margin-bottom: 2rem;
+}
+.banner button{
+    font-family: "Mulish", serif;
+    color: #000;
+    background-color: purple;
+    
 }
