--- a/style.css
+++ b/style.css
@@ -26,6 +26,16 @@ header{
     height: 100%;
     object-fit: cover;
     opacity: 0.5;
+    animation: zoom 25s;
+}
+
+@keyframes zoom {
+    0%{
+        transform: scale(1.3);
+    }
+    100%{
+        transform: scale(1);
+    }
 }
 .banner{
     position: absolute;
@@ -43,6 +53,8 @@ header{
     text-shadow: .3rem .4rem 2px rgba(0, 0, 0, 4);
     line-height: 3.5rem;
     margin-bottom: 2rem;
+    opacity: 0;
+    animation: moveBanner 1s 0.5s forwards;
 }
 
 .banner p{
@@ -51,10 +63,33 @@ header{
     font-size: 2rem;
     text-shadow: .2rem .2rem rgba(0, 0, 0, .4);
     margin-bottom: 2rem;
+    opacity: 0;
+    animation: moveBanner 1s 0.7s forwards;
 }
 .banner button{
     font-family: "Mulish", serif;
-    color: #000;
-    background-color: purple;
-    
+    color: #fff;
+    text-transform: uppercase;
+    letter-spacing: .1rem;
+    background:  #6a3093;  
+    background:  #ff0084; 
+    background: -webkit-linear-gradient(to right, #33001b, #ff0084);  
+    background: linear-gradient(to left, #33001b, #ff0084); 
+    padding: 1rem 3rem;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    opacity: 0;
+    animation: moveBanner 1s 0.9s forwards;
 }
+@keyframes moveBanner{
+    0%{
+        transform: translateY(10rem) rotateY(-30deg);
+    }
+    100%{
+        transform: translateY(0) rotateY(0);
+        opacity: 1;
+    }
+}
+
+
